fixed shortcut buttons not showing up.  fixed nex/prev search buttons not showing up.  fixed search drag/delete/open buttons not showing up.

--- a/src/client/views/collections/CollectionSchemaView.scss
+++ b/src/client/views/collections/CollectionSchemaView.scss
@@ -409,6 +409,7 @@ button.add-column {
             display: flex;
             flex-direction: column;
             justify-content: center;
+            z-index: 2;
 
             &:hover {
                 color: gray;
